Add debug to AsyncTask default

--- a/neovim/.config/nvim/tasks.ini
+++ b/neovim/.config/nvim/tasks.ini
@@ -22,9 +22,21 @@ cwd=<root>
 output=terminal
 save=2
 
+[run-debug]
+command:c,cpp,make=make && ./$(VIM_PRONAME)db
+command:rust=cargo run
+output=terminal
+save=2
+
 [clean]
 command:c,cpp,make=make clean
 command:dockerfile=docker image prune -y
+cwd=<root>
+output=terminal
+save=2
+
+[test]
+command:c,cpp,make,python,cucumber=make test
 cwd=<root>
 output=terminal
 save=2
